2002-10-31  Masatake YAMATO  <jet@gyve.org>

	* src/sp-image.c (autotrace_dialog): invokeed frontline_init
	if it is defined. in-cvs version of frontline defines 
	frontline_init.

2002-10-27  Lauris Kaplinski  <lauris@kaplinski.com>

	* src/helper/curve.c (sp_bpath_clean): Fixed warning (thanks to MenTaLguY)

2002-10-26  Lauris Kaplinski  <lauris@kaplinski.com>

	* src/dialogs/text-edit.c (sp_text_edit_dialog_update_object): Make
	style srings lowercase before applying

	* src/dialogs/desktop-properties.c (sp_desktop_dialog_new): Added
	togglebutton for showing/hiding page border

	* src/desktop.c (sp_dt_namedview_modified): Show/hide page border

	* src/sp-namedview.c (sp_namedview_read_attr): Listen to "showborder"

2002-10-25  Lauris Kaplinski  <lauris@kaplinski.com>

	* src/dialogs/item-properties.c: Removed libglade dependency

2002-10-23  Lauris Kaplinski  <lauris@kaplinski.com>

	* configure.in: Added check for popt.h

	* src/dialogs/align.c: Removed libglade dependency

	* src/toolbox.c: Removed libglade dependency

2002-10-22  Lauris Kaplinski  <lauris@kaplinski.com>

	* src/toolbox.c (sp_toolbox_button_new): Helper
	(sp_toolbox_toggle_button_new): Ditto
	(sp_toolbox_file_create): Degladeified method

	* src/file.c (sp_file_export_dialog): Frontend

	* src/toolbox.c (sp_toolbox_toggle_button_new): Helper
	(sp_toolbox_draw_create): Use previous

	* src/main.c: #include <desktop.h>

2002-10-21  Lauris Kaplinski  <lauris@kaplinski.com>

	* src/widgets/sp-toolbox.c: Removed whole gtk.h inclusion

	* src/toolbox.c: Added missing headers

	* src/print.c (sp_print_image_R8G8B8A8_N): Implement
	(sp_print_preview): Remove root transform
	(sp_print_fill): Do not apply ctm twice

2002-10-20  Lauris Kaplinski  <lauris@kaplinski.com>

	* src/libnr/nr-compose-transform.c (nr_R8G8B8A8_P_R8G8B8A8_P_R8G8B8A8_N_TRANSFORM):
	Use mmx subcomposers if needed

	* src/libnr/nr_mmx_R8G8B8A8_P_R8G8B8A8_P_R8G8B8A8_N_TRANSFORM.S: New file
