@@ -27,6 +27,7 @@ src/dialogs/xml-tree.c
 src/document.c
 src/dyna-draw-context.c
 src/event-context.c
+src/print.c
 src/rect-context.c
 src/select-context.c
 src/spiral-context.c
