@@ -109,10 +109,10 @@ nr_typeface_gnome_attribute_get (NRTypeFace *tf, const unsigned char *key, unsig
 
 	tfg = (NRTypeFaceGnome *) tf;
 
-	if (!strcmp (key, "family")) {
+	if (!strcmp (key, "name")) {
+		val = gnome_font_face_get_name (tfg->face);
+	} else if (!strcmp (key, "family")) {
 		val = gnome_font_face_get_family_name (tfg->face);
-	} else if (!strcmp (key, "style")) {
-		val = gnome_font_face_get_species_name (tfg->face);
 	} else if (!strcmp (key, "weight")) {
 		guint wc;
 		wc = gnome_font_face_get_weight_code (tfg->face);
